Исправил замечания ревьюера