@@ -1,40 +1,54 @@
 package com.example;
 
 import org.junit.jupiter.api.Test;
-import java.util.List;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
+import org.junit.jupiter.params.provider.ValueSource;
 import static org.junit.jupiter.api.Assertions.*;
+
+import java.util.List;
+import java.util.Arrays;
 
 class AnimalTest {
 
-    private final Animal animal = new Animal();
+    @Test
+    void testGetFamilyReturnsCorrectValue() {
+        Animal animal = new Animal();
+        String expectedFamily = "Существует несколько семейств: заячьи, беличьи, мышиные, кошачьи, псовые, медвежьи, куньи";
+        assertEquals(expectedFamily, animal.getFamily());
+    }
+
+    @ParameterizedTest
+    @CsvSource({
+            "Травоядное, Трава;Различные растения",
+            "Хищник, Животные;Птицы;Рыба"
+    })
+    void testGetFoodForValidKinds(String animalKind, String expectedFoodStr) throws Exception {
+        Animal animal = new Animal();
+        List<String> actualFood = animal.getFood(animalKind);
+        List<String> expectedFood = Arrays.asList(expectedFoodStr.split(";"));
+        assertIterableEquals(expectedFood, actualFood);
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"Птица", "Рыба", "Насекомое"})
+    void testGetFoodThrowsExceptionForInvalidKinds(String animalKind) {
+        Animal animal = new Animal();
+        Exception exception = assertThrows(Exception.class, () -> animal.getFood(animalKind));
+        assertEquals("Неизвестный вид животного, используйте значение Травоядное или Хищник", exception.getMessage());
+    }
 
     @Test
     void testGetFoodForHerbivore() throws Exception {
-        List<String> expected = List.of("Трава", "Различные растения");
-        assertIterableEquals(expected, animal.getFood("Травоядное"));
+        Animal animal = new Animal();
+        List<String> expectedFood = Arrays.asList("Трава", "Различные растения");
+        assertIterableEquals(expectedFood, animal.getFood("Травоядное"));
     }
 
     @Test
     void testGetFoodForPredator() throws Exception {
-        List<String> expected = List.of("Животные", "Птицы", "Рыба");
-        assertIterableEquals(expected, animal.getFood("Хищник"));
-    }
-
-    @Test
-    void testGetFoodWithInvalidKindThrowsException() {
-        Exception exception = assertThrows(
-                Exception.class,
-                () -> animal.getFood("Неизвестный")
-        );
-        assertEquals(
-                "Неизвестный вид животного, используйте значение Травоядное или Хищник",
-                exception.getMessage()
-        );
-    }
-
-    @Test
-    void testGetFamily() {
-        String expected = "Существует несколько семейств: заячьи, беличьи, мышиные, кошачьи, псовые, медвежьи, куньи";
-        assertEquals(expected, animal.getFamily());
+        Animal animal = new Animal();
+        List<String> expectedFood = Arrays.asList("Животные", "Птицы", "Рыба");
+        assertIterableEquals(expectedFood, animal.getFood("Хищник"));
     }
 }
